--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple static blog with markdown support",
   "main": "index.js",
   "scripts": {
-    "build": "node scripts/build.js"
+    "build": "node scripts/build.js",
+    "start": "node scripts/server.js"
   },
   "keywords": [
     "blog",
